# scout

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  README.md  deny.toml  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  musl-build.yml  release.yml
docs/adr/: .template.md  001-ranking-doctrine.md  002-dependency-roster.md  003-threat-model.md  004-action-config-schema.md
docs/adr/positions/: council-architect.md  council-intel.md  council-quartermaster.md  council-security.md  council-surgeon.md
examples/: config.toml
migrations/: 0001_initial.sql
ops/: AGENTS.md  CAMPAIGN.md  HANDOFF.md  OPORD.md  phase-0-mobilize.md  phase-1-council.md  phase-2-db.md  playbook.md
ops/state/: council-architect.json  council-intel.json  council-quartermaster.json  council-security.json  council-surgeon.json  engineers.json  pioneers.json  rifles-1.json  rifles-2.json  rifles-3.json
shell/: scout.bash
src/: lib.rs  main.rs
src/actions/: mod.rs
src/config/: canonical.rs  loader.rs  mod.rs  paths.rs  sha256.rs  template.rs  trust.rs
src/index/: insert.rs  mod.rs  pragma.rs  recovery.rs  schema.rs  signals.rs  visit.rs  walk.rs
src/ipc/: mod.rs
src/search/: matcher.rs  mod.rs  ranking.rs
src/ui/: mod.rs  preview.rs  render.rs  strip.rs
tests/: actions_exec.rs  config_loader.rs  docs_parity.rs  index_pragma.rs  index_recovery.rs  index_schema.rs  index_walk.rs  search_ranking.rs
