[package]
name = "scout"
version = "0.0.0"
edition = "2021"
authors = ["Kairu Wangui <kairusimple@gmail.com>"]
description = "Fast project finder and action launcher"
license = "MIT"
publish = false

# Dependency roster is fixed by ADR-002. Phase 2 admission list per
# OPORD 2026-05-01: rusqlite (bundled), tracing, tracing-subscriber,
# signal-hook, ignore. Any crate beyond the ADR-002 roster requires a
# successor ADR signed by the commander.

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ignore = "0.4"
signal-hook = "0.3"
nucleo-matcher = "0.3"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"

[lib]
name = "scout"
path = "src/lib.rs"

[[bin]]
name = "scout"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
